--- a/index.html
+++ b/index.html
@@ -1,108 +1,142 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Ton City 💎</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    
-    <style>
-        :root { --primary: #facc15; --bg: #0b0f1a; --card: #161d2f; --accent: #38bdf8; --green: #4ade80; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: white; margin: 0; padding-bottom: 90px; overflow-x: hidden; }
-        
-        .header { padding: 15px; display: flex; justify-content: space-between; align-items: center; }
-        .user-badge { background: rgba(56, 189, 248, 0.1); padding: 8px 15px; border-radius: 20px; border: 1px solid var(--accent); color: var(--accent); font-weight: bold; display: flex; align-items: center; gap: 8px; }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Ton City 💎</title>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+<script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-        .main-balance { text-align: center; margin: 15px 0; }
-        .amount { font-size: 2.5rem; font-weight: bold; margin: 5px 0; }
-        .rate { color: var(--green); font-size: 0.8rem; }
+<style>
+:root { --primary: #facc15; --bg: #0b0f1a; --card: #161d2f; --accent: #38bdf8; --green: #4ade80; }
+body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: white; margin:0; padding-bottom:90px; overflow-x:hidden; }
 
-        .city-container { padding: 12px; display: grid; grid-template-columns: 1fr; gap: 12px; justify-items:center; }
-        .card { background: var(--card); border-radius: 18px; padding: 15px; text-align: center; border: 1px solid rgba(255,255,255,0.05); cursor: pointer; width:90%; max-width:300px; }
-        .card img { width: 50px; margin-bottom: 10px; }
-        .card h3 { margin: 5px 0; font-size: 1rem; text-transform: uppercase; }
+.header { padding:15px; display:flex; justify-content:space-between; align-items:center; }
+.user-badge { background: rgba(56,189,248,0.1); padding:8px 15px; border-radius:20px; border:1px solid var(--accent); color:var(--accent); font-weight:bold; display:flex; align-items:center; gap:8px; }
 
-        /* Edificio Central VIP */
-        .card-central { border: 2px solid var(--primary); box-shadow: 0 0 15px rgba(250, 204, 21, 0.2); }
-        .card-central h3 { color: var(--primary); font-size: 1.1rem; }
+.main-balance { text-align:center; margin:15px 0; }
+.amount { font-size:2.5rem; font-weight:bold; margin:5px 0; }
+.rate { color: var(--green); font-size:0.8rem; }
 
-        /* Modales Estilo Capturas */
-        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 1000; }
-        .modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #161d2f; width: 90%; max-width:400px; padding: 20px; border-radius: 20px; z-index: 1001; border: 1.5px solid var(--primary); }
-        .stat-row { display: flex; justify-content: space-between; padding: 10px 0; border-bottom: 1px solid rgba(255,255,255,0.05); font-size: 0.9rem; }
-        .modal button { padding:8px 12px; background:var(--primary); border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
+.city-container { padding:12px; display:grid; grid-template-columns: 1fr 1fr; gap:12px; justify-items:center; }
 
-        /* BANCO */
-        .bank-item { display:flex; justify-content: space-between; align-items:center; margin:8px 0; }
-        .bank-item button { padding:4px 8px; font-size:0.8rem; }
+.card { background: var(--card); border-radius: 18px; padding:15px; text-align:center; border:1px solid rgba(255,255,255,0.05); cursor:pointer; width:95%; max-width:200px; }
+.card img { width:40px; margin-bottom:10px; }
+.card h3 { margin:5px 0; font-size:0.8rem; text-transform:uppercase; }
+.card p { font-size:0.65rem; color:#94a3b8; margin:0; }
 
-        .nav-bar { position: fixed; bottom: 0; width: 100%; background: #0f172a; display: flex; justify-content: space-around; padding: 12px 0; border-top: 1px solid #1e293b; }
-        .nav-item { text-align: center; color: #94a3b8; font-size: 0.8rem; font-weight: bold; }
-        .nav-item img { width: 22px; display: block; margin: 0 auto 5px; }
-    </style>
+.card-central { grid-column: span 2; border:1.5px solid var(--primary); box-shadow:0 0 15px rgba(250,204,21,0.2); }
+.card-central img { width:50px; }
+.card-central h3 { color: var(--primary); font-size:1.1rem; }
+
+.border-blue { border-bottom:3px solid var(--accent); }
+
+.overlay { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:1000; }
+.modal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#161d2f; width:85%; max-width:400px; padding:20px; border-radius:20px; z-index:1001; border:1.5px solid var(--primary); }
+.stat-row { display:flex; justify-content:space-between; padding:10px 0; border-bottom:1px solid rgba(255,255,255,0.05); font-size:0.9rem; }
+
+.nav-bar { position:fixed; bottom:0; width:100%; background:#0f172a; display:flex; justify-content:space-around; padding:12px 0; border-top:1px solid #1e293b; }
+.nav-item { text-align:center; color:#94a3b8; font-size:0.7rem; font-weight:bold; }
+.nav-item img { width:22px; display:block; margin:0 auto 5px; }
+
+.bank-item { display:flex; justify-content:space-between; align-items:center; margin:8px 0; }
+.bank-item button { padding:4px 8px; font-size:0.8rem; }
+
+</style>
 </head>
 <body>
 
-    <div class="header">
-        <div class="user-badge">💎 <span id="user-display">Cargando...</span></div>
-        <div id="ton-connect-button"></div>
+<div class="header">
+    <div class="user-badge">💎 <span id="user-display">Cargando...</span></div>
+</div>
+
+<div class="main-balance">
+    <div style="font-size:0.7rem; color: var(--accent); letter-spacing:1px;">TOTAL DIAMANTES</div>
+    <div class="amount">💎 <span id="diamonds">0</span></div>
+    <div class="rate">+<span id="rate">0</span> 💎/hr</div>
+</div>
+
+<div class="city-container">
+    <!-- EDIFICIO CENTRAL -->
+    <div class="card card-central" onclick="openCentral()">
+        <img src="https://cdn-icons-png.flaticon.com/512/3859/3859152.png">
+        <h3>EDIFICIO CENTRAL</h3>
+        <p>Ver estadísticas de todos los edificios</p>
     </div>
 
-    <div class="main-balance">
-        <div style="font-size:0.7rem; color: var(--accent); letter-spacing:1px;">TOTAL DIAMANTES</div>
-        <div class="amount">💎 <span id="diamonds">0</span></div>
-        <div class="rate">+<span id="rate">0</span> 💎/hr</div>
+    <!-- BANCO -->
+    <div class="card border-blue" onclick="openBank()">
+        <img src="https://cdn-icons-png.flaticon.com/512/2721/2721121.png">
+        <h3>Banco</h3>
+        <p>Compra TON por diamantes</p>
     </div>
 
-    <div class="city-container">
-        <div class="card card-central" onclick="openCentral()">
-            <img src="https://cdn-icons-png.flaticon.com/512/3859/3859152.png">
-            <h3>Centro de Negocios</h3>
-            <p style="font-size:0.7rem; color:#94a3b8; margin:0;">Ver estadísticas</p>
-        </div>
-
-        <div class="card" onclick="openBank()">
-            <img src="https://cdn-icons-png.flaticon.com/512/2721/2721121.png">
-            <h3>Banco</h3>
-            <p style="font-size:0.7rem; color:var(--green); margin:0;">Compra TON por diamantes</p>
-        </div>
+    <!-- OTROS EDIFICIOS -->
+    <div class="card border-blue">
+        <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png">
+        <h3>Tienda</h3>
+        <div>Lvl: <span id="lvl-tienda">0</span></div>
     </div>
 
-    <div class="overlay" id="overlay" onclick="closeAll()"></div>
-
-    <!-- MODAL CENTRAL -->
-    <div class="modal" id="centralModal">
-        <h3 style="color:var(--primary); text-align:center;">ESTADÍSTICAS</h3>
-        <div class="stat-row"><span>Tienda:</span> <span id="s_tienda">0</span> 💎/hr</div>
-        <div class="stat-row"><span>Casino:</span> <span id="s_casino">0</span> 💎/hr</div>
-        <div class="stat-row"><span>Piscina:</span> <span id="s_piscina">0</span> 💎/hr</div>
-        <div class="stat-row"><span>Parque:</span> <span id="s_parque">0</span> 💎/hr</div>
-        <div class="stat-row"><span>Diversión:</span> <span id="s_diversion">0</span> 💎/hr</div>
-        <div class="stat-row"><span>Total:</span> <span id="s_total">0</span> 💎/hr</div>
-        <button onclick="closeAll()">CERRAR</button>
+    <div class="card border-blue">
+        <img src="https://cdn-icons-png.flaticon.com/512/2907/2907246.png">
+        <h3>Casino</h3>
+        <div>Lvl: <span id="lvl-casino">0</span></div>
     </div>
 
-    <!-- MODAL BANCO -->
-    <div class="modal" id="modalBank">
-        <h3 style="color:var(--primary); text-align:center;">BANCO</h3>
-        <div id="bankList">
-            <!-- Se llenará dinámicamente desde index.js con TON y 💎 -->
-        </div>
-        <button onclick="closeAll()">CERRAR</button>
+    <div class="card border-blue">
+        <img src="https://cdn-icons-png.flaticon.com/512/1521/1521361.png">
+        <h3>Piscina</h3>
+        <div>Lvl: <span id="lvl-piscina">0</span></div>
     </div>
 
-    <!-- NAV BAR -->
-    <div class="nav-bar">
-        <div class="nav-item" onclick="alert('Amigos en desarrollo');">
-            <img src="https://cdn-icons-png.flaticon.com/512/1216/1216712.png">AMIGOS
-        </div>
-        <div class="nav-item" onclick="retirar()">
-            <img src="https://cdn-icons-png.flaticon.com/512/2611/2611110.png">RETIRAR
-        </div>
+    <div class="card border-blue">
+        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
+        <h3>Parque</h3>
+        <div>Lvl: <span id="lvl-parque">0</span></div>
     </div>
 
-    <script src="index.js"></script>
+    <div class="card border-blue">
+        <img src="https://cdn-icons-png.flaticon.com/512/883/883146.png">
+        <h3>Diversiones</h3>
+        <div>Lvl: <span id="lvl-diversion">0</span></div>
+    </div>
+</div>
+
+<div class="overlay" id="overlay" onclick="closeAll()"></div>
+
+<!-- MODAL CENTRAL -->
+<div class="modal" id="centralModal">
+    <h3 style="color:var(--primary); text-align:center;">ESTADÍSTICAS</h3>
+    <div class="stat-row"><span>Tienda:</span> <span id="s_tienda">0</span> 💎/hr</div>
+    <div class="stat-row"><span>Casino:</span> <span id="s_casino">0</span> 💎/hr</div>
+    <div class="stat-row"><span>Piscina:</span> <span id="s_piscina">0</span> 💎/hr</div>
+    <div class="stat-row"><span>Parque:</span> <span id="s_parque">0</span> 💎/hr</div>
+    <div class="stat-row"><span>Diversión:</span> <span id="s_diversion">0</span> 💎/hr</div>
+    <div class="stat-row"><span>Total:</span> <span id="s_total">0</span> 💎/hr</div>
+    <button onclick="closeAll()">CERRAR</button>
+</div>
+
+<!-- MODAL BANCO -->
+<div class="modal" id="modalBank">
+    <h3 style="color:var(--primary); text-align:center;">BANCO</h3>
+    <div id="bankList">
+        <!-- Botones 0.1 a 10 TON con diamantes se llenan desde index.js -->
+    </div>
+    <button onclick="closeAll()">CERRAR</button>
+</div>
+
+<!-- NAV BAR -->
+<div class="nav-bar">
+    <div class="nav-item" onclick="alert('Amigos en desarrollo');">
+        <img src="https://cdn-icons-png.flaticon.com/512/1216/1216712.png">AMIGOS
+    </div>
+    <div class="nav-item" onclick="retirar()">
+        <img src="https://cdn-icons-png.flaticon.com/512/2611/2611110.png">RETIRAR
+    </div>
+</div>
+
+<script src="index.js"></script>
 </body>
-    </html>
+</html>
